# hw_regression

./: CMakeLists.txt  Data.h  GradientDescent.h  LinearRegression.cpp  LinearRegression.h  PyRegression.cpp  README.md  basic_table.html  main.py  test.py
cmake/: FindPython3Interp.cmake
